# tauri-mono

./: .dockerignore  .eslint.helpers.cjs  .eslintignore  .eslintrc.cjs  .eslintrc.js  .gitignore  .oxfmtrc.json  .oxfmtrc.jsonc  .oxlintrc.json  .prettierignore  .prettierrc.cjs  .prettierrc.js  Cargo.toml  README.md  bun.lockb  docker-compose.yml  eslint.config.js  eslint.config.ts  index.html  jest.config.js  jest.config.ts  lefthook.yml  nx.json  oxfmt.config.ts  oxlint.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  rollup.config.mjs  rust-toolchain.toml  rustfmt.toml  stylelint.config.js  tailwind.config.js  tailwind.config.ts  tombi.toml  tsconfig.base.json  tsconfig.bun.json  tsconfig.json  tsconfig.node.json  (+6 more)
.github/actions/get-app-properties/: action.yml
.github/actions/read-tauri-config/: action.yml
.github/actions/setup/: action.yml
.github/actions/test-lint/: action.yml
.github/actions/verify/: action.yml
.github/workflows/: build.yml  e2e.yml  test-lint.yml
.zed/: settings.json
apps/app/: .eslintignore  .eslintrc.cjs  .gitignore  .oxlintrc.json  .prettierignore  eslint.config.js  eslint.config.ts  index.html  lefthook.yml  oxlint.config.ts  package.json  prettier.config.js  tailwind.config.ts  tsconfig.app.json  tsconfig.bun.json  tsconfig.json  tsconfig.node.json  tsconfig.web.json  tsr.config.json  vite.config.ts  vite.isolation.config.ts  vitest.config.ts  vitest.setup.ts
apps/app-ui/: .gitignore  .oxlintrc.json  Dockerfile  eslint.config.js  index.html  lefthook.json  lefthook.yml  oxlint.config.ts  package.json  tsconfig.app.json  tsconfig.bun.json  tsconfig.json  tsconfig.node.json  tsr.config.json  vite.config.ts
apps/app-ui/src/: app.tsx  logger.ts  main.tsx  vitest.setup.ts
apps/app-ui/src/__mocks__/: bindings.ts
apps/app-ui/src/__test-helpers__/: render-wrapper.tsx
apps/app-ui/src/__test-helpers__/mock-data/: system.ts
apps/app-ui/src/__test-helpers__/tauri/: commands.ts  events.ts  mock-bindings.ts
apps/app-ui/src/components/: button.tsx  card.tsx  chrono-graph.tsx  info-list.tsx
apps/app-ui/src/hooks/: dom.ts  files.ts  system-stats.ts  theme.ts
apps/app-ui/src/layouts/: app.tsx  page.tsx
apps/app-ui/src/lib/: error.ts  format.ts  mutations.ts  number.ts  queries.ts  style.ts
apps/app-ui/src/pages/: files.tsx
apps/app-ui/src/pages/home/: home.test.tsx  index.tsx  system-info-card.tsx  system-stats-card.tsx
apps/app-ui/src/pages/settings/: theme-switch.tsx
apps/app-ui/src/routes/: __root.tsx  files.tsx  index.tsx  settings.tsx
apps/app-ui/src/routes/-index/: index.test.tsx  system-info-card.tsx  system-stats-card.tsx  tauri-commands.tsx
apps/app-ui/src/routes/-settings/: theme-switch.tsx
apps/app-ui/src/typings/: util.d.ts
apps/app/scripts/: lib.ts  testscript.ts
apps/app/src/: app.tsx  index.css  index.ts  index.tsx  logger.ts  main.tsx  tsconfig.json  vitest.setup.ts
apps/app/src-isolation/: index.html  index.ts  tsconfig.json
apps/app/src-tauri/: Cargo.toml  tauri.conf.json
apps/app/src-tauri/capabilities/: default.json  dialog.json  log.json  main-remote.json  main.json  theme.json
apps/app/src-tauri/src/: files.rs  lib.rs  main.rs  preferences.rs  system_info.rs  system_stats.rs  theme.rs
apps/app/src-tauri/src/app_commands/: mod.rs  system_info.rs
apps/app/src/__generated__/: bindings.ts
apps/app/src/__generated__/__mocks__/: bindings.ts
apps/app/src/__generated__/bindings/: commands.ts  system-info-event.ts
apps/app/src/__test-helpers__/: render-wrapper.tsx
apps/app/src/__test-helpers__/mock-data/: create.ts  system.ts
apps/app/src/__test-helpers__/tauri/: commands.ts  events.ts
apps/app/src/bridge/: subscribe.test.ts  subscribe.ts
apps/app/src/components/: button.tsx  card.tsx  chrono-graph.tsx  info-list.tsx  masthead.tsx  window-drag-region.tsx
apps/app/src/hooks/: dom.ts  files.ts  system-stats.ts  theme.ts  use-file-drop.ts  use-file-select-dialog.ts  use-system-info.ts  use-system-stats.ts  use-system-theme.ts  use-theme.ts  use-ui-theme.ts
apps/app/src/layouts/: app.tsx
apps/app/src/lib/: format.ts  math.ts  number.ts  queries.ts  style.ts
apps/app/src/pages/: files.tsx  system-info.tsx
apps/app/src/routes/: __root.tsx  files.tsx  index.tsx  settings.tsx
apps/app/src/services/: heartbeat.ts  sys-info.ts  system-theme.ts  theme.ts
apps/app/src/typings/: env.d.ts  util.d.ts
apps/tauriplay/: .eslintignore  .prettierrc.cjs  README.md  index.html  package.json  rollup.config.js  vite.config.ts
apps/tauriplay/src/: app.tsx
apps/tauriplay/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauriplay/src/bridge/: subscribe.ts
apps/tauriplay/src/components/: button.tsx  pulse.tsx  status-badge.tsx  window-drag-region.tsx
apps/tauriplay/src/pages/: files.tsx  system-info.test.tsx
apps/tauriplay/src/services/: files.ts
scripts/: lib.ts  testscript.ts
src/: app.css.ts  app.tsx  bridge.ts  index.css  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bindings/: heartbeat-event.ts
src-tauri/src/: main.rs
src-tauri/src/app_commands/: heartbeat.rs  sys_info.rs
src/__generated__/: custom-command-response.ts  custom-event.ts  load-files-response.ts  select-files-response.ts
src/__generated__/bindings/: commands.ts
src/bridge/: index.ts  invoke.test.ts  invoke.ts  subscribe.test.ts  subscribe.ts
src/bridge/__generated__/: sys-info-response.ts
src/components/: button.tsx  masthead.tsx  pulse.tsx  window-drag-region.tsx
src/hooks/: file.ts  use-file-drop.ts
src/isolation/: index.ts
src/lib/util/: is-error-like.ts
src/pages/: files.tsx  system-info.test.tsx  system-info.tsx
src/screens/: file-select.css.ts  file-select.tsx  files.tsx  sys-info.tsx
src/services/: files.ts  heartbeat.ts  sys-info.ts
src/style/: colors.css  global-style.css.ts  global-style.tsx  theme-context.tsx  theme-store.tsx  theme.css
src/style/theme/: dark.css.ts  index.ts  light.css.ts  vars.css.ts
src/typings/: utility.d.ts
src/typings/tauri/: another-custom-response.ts  custom-event.ts  custom-response.ts  index.ts
(+18 files in other folders)
