[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.2.1", features = ["isolation"] }

[dependencies]
serde_json = "1.0.93"
serde = { version = "1.0.152", features = ["derive"] }
sysinfo = "0.27.7"
ts-rs = "6.2.1"

[dependencies.tauri]
version = "1.2.4"
features = [ "window-start-dragging", "window-show","isolation", "dialog-open"]

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.release]
codegen-units = 1
opt-level = "s"
lto = "fat"
incremental = false
panic = "abort" # https://users.rust-lang.org/t/panic-unwind-vs-abort/9928/4
