[package]
name = "some-tauri-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = ["isolation"] }

[dependencies]
serde_json = "1.0.96"
serde = { version = "1.0.160", features = ["derive"] }
sysinfo = "0.28.4"
ts-rs = "6.2.1"

[dependencies.tauri]
version = "1.2.4"
features = ["window-start-dragging", "window-show", "isolation", "dialog-open"]

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

# https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.release]
codegen-units = 1
opt-level = "s"
lto = "fat"
incremental = false
panic = "abort" # https://users.rust-lang.org/t/panic-unwind-vs-abort/9928/4
