[package]
name = "app"
version = "1.0.0-dev.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies.tauri-build]
version = "2.0.1"
features = ["isolation"]

[dependencies]
chrono = "0.4.38"
log = "0.4.22"
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
specta = "2.0.0-rc.20"
specta-typescript = "0.0.7"
sysinfo = "0.30.13"
tauri-plugin-dialog = "2.0.1"
tauri-plugin-log = "2.0.1"
tauri-plugin-theme = "2.1.2"
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
window-vibrancy = "0.5.2"

[dependencies.tauri]
version = "2.0.4"
features = ["isolation", "macos-private-api"]

[dependencies.tauri-specta]
version = "2.0.0-rc.20"
features = ["derive", "typescript"]

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
