[package]
name = "app"
version = "1.0.0-dev.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2024"

[lib]
# see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies.tauri-build]
version = "2.4.1"
features = ["isolation"]

[dependencies]
chrono = "0.4.42"
log = "0.4.28"
serde_json = "1.0.145"
serde = { version = "1.0.225", features = ["derive"] }
specta = "2.0.0-rc.22"
specta-typescript = "0.0.9"
sysinfo = "0.35.2"
tauri-plugin-dialog = "2.4.0"
tauri-plugin-log = "2.7.0"
tauri-plugin-store = "2.4.0"
uuid = { version = "1.18.1", features = ["v4", "fast-rng"] }
window-vibrancy = "0.6.0"

[dependencies.tauri]
version = "2.8.5"
features = ["isolation", "macos-private-api"]

[dependencies.tauri-specta]
version = "2.0.0-rc.21"
features = ["derive", "typescript"]

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
