[package]
name = "app"
version = "1.0.0-dev.0"
edition.workspace = true
description = "A Tauri App"
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]
# see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"

[dependencies]
chrono = "0.4.43"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
specta = "2.0.0-rc.22"
specta-typescript = "0.0.9"
sysinfo = "0.35.2"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-log = "2.8.0"
tauri-plugin-store = "2.4.2"
uuid = { version = "1.20.0", features = ["fast-rng", "v4"] }

[dependencies.tauri]
version = "2.10.1"
features = ["isolation", "macos-private-api"]

[dependencies.tauri-specta]
version = "2.0.0-rc.21"
features = ["derive", "typescript"]

[build-dependencies.tauri-build]
version = "2.5.4"
features = ["isolation"]

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
